--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -9,5 +9,5 @@
       = f.text_area :description, class: ["form__input--textarea"]
 
     = button_tag(type: 'submit', class: 'submit') do
-      Crear colleción
+      Crear coleción
       %span.submit__icon
