-File "Politica de privacidad" was created -Politica de privacidad was added to footer as a linkt to the pdf

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -4,5 +4,5 @@
     %a.footer_link-item{:href => "/"} Inicio
     %a.footer_link-item{:href => "#"} Acerca de nosotros
     %a.footer_link-item{:href => "#"} Contacto
-    %a.footer_link-item{:href => "#"} Aviso de privacidad
+    %a.footer_link-item{:href => "/POLITICA DE PRIVACIDAD.pdf", :target => "_blank"} Política de privacidad
     %a.footer_rights-copyright | ©2017 Cheesy
