--- a/app/views/pages/conoceme.html.haml
+++ b/app/views/pages/conoceme.html.haml
@@ -1,13 +1,20 @@
-.bio
-    .bio__photo
-        = image_tag("me.png", class: 'bio__photo__picture', alt: "")
+.about
+    .about__photo
+        = image_tag("isotipo.png", class: 'about__photo__picture', alt: "")
 
-    .bio__text
-        %h2.bio__text__title
-            Daniel Gordián
+    .about__text
+        %h2.about__text__title
+            Cheesy.mx
 
-        .bio__text__text
-            %p Actualmente vivo en Puebla, México, orgulloso miembro de una familia compuesta por mis padres y seis hermanos, quienes han sido parte importante de mi formación.
-            %p Mi pasión por este gran arte tuvo su origen en el campus Tehuacán de la Benemérita Universidad Autónoma de Puebla, fue ahí donde mi vida cambio radicalmente haciendo de la fotografía mi actividad con mayor prioridad hasta convertirme en un joven profesional.
-            %p.bio__text__text--extra Me especializo en bodas y quince años, buscando documentar de forma creativa cada retrato capturado, proyectando de manera emotiva y natural todos los momentos presentes en tu evento; ese dia que está lleno de pequeños detalles que has cuidado y elegido con tanta precisión, detalles que no pasarán inadvertidos y que personalmente me encargaré de cubrirlos todos para que los puedas ver reflejado en el reportaje de tu día.
-            %p Te agradezco infinitamente que me estés considerando como <b>tu Fotógrafo.</b>
+        .about__text__text
+            %h3 Misión
+            %p En Cheesy queremos ayudarte a capturar tus momentos más especiales y convertirlos en historias perdurables, brindando el mejor servicio a nuestros clientes, seguridad de sus datos y la mejor experiencia mientras recuerdan aquellos eventos en nuestra plataforma digital de fotografía.
+            %h3 Visión
+            %p Ser la principal opción de todas las personas al pensar en fotografía digital para sus eventos, buscando soluciones innovadoras y asequibles con la mejor calidad en nuestro servicio.
+            %h3 Valores
+            %ul
+                %li Responsabilidad
+                %li Profesionalismo
+                %li Integridad
+                %li Ética Profesional
+
