--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -2,7 +2,7 @@
   = image_tag("isologo--negative.png",  class: 'footer_image')
   %div.footer_link
     %a.footer_link-item{:href => "/"} Inicio
-    %a.footer_link-item{:href => "#"} Acerca de nosotros
+    %a.footer_link-item{:href => "/:conocenos"} Acerca de nosotros
     %a.footer_link-item{:href => "#"} Contacto
     %a.footer_link-item{:href => "/POLITICA DE PRIVACIDAD.pdf", :target => "_blank"} Política de privacidad
     %a.footer_rights-copyright | ©2017 Cheesy
