--- a/app/views/generations/show.html.haml
+++ b/app/views/generations/show.html.haml
@@ -1,4 +1,4 @@
-%section.jumbotron
+%section.jumbotron{style: "background-image: linear-gradient(#161918, rgba(239, 234, 236, 0.1)), url(#{::DBX.get_temporary_link(@generation.dpath + "/logo.png")[1]}"}
   %h1= @generation.title
   %div.jumbotron_buttons
     %a.jumbotron_buttons-item{"data-popup-open" => "popup-generation", :href => "#"} Expandir
@@ -7,7 +7,7 @@
 
 .grid-image
   - if admin_signed_in?
-    = link_to "Agregar grupo", new_school_generation_group_path(@school, @generation), class: "button button--add"
+    = link_to "Editar", edit_school_generation_path(@school, @generation), class: "button button--add"
 
 .events--relative
   .mosaicos
@@ -16,7 +16,7 @@
       = link_to([@school, @generation, group]) do
         .mosaico
           .mosaico__picture{:href => school_generation_group_path(@school, @generation, group)}
-            = image_tag("http://placepu.gs/500/300", alt: "No hay imagenes en esta colleción")
+            = image_tag(::DBX.get_temporary_link(group.dpath + "/logo.png")[1], alt: group.description || "Foto grupal")
             %h3= group.title
 
 
