--- a/app/views/schools/index.html.haml
+++ b/app/views/schools/index.html.haml
@@ -2,7 +2,7 @@
   %h1 Cheesy
   %h2 Historias que perduran
 
-.grid-image
+-#.grid-image
   - if admin_signed_in?
     = link_to "Agregar una escuela", new_school_path, class: "button button--add"
 .schools-container
