--- a/app/views/schools/show.html.haml
+++ b/app/views/schools/show.html.haml
@@ -1,6 +1,6 @@
-%section.jumbotron
+%section.jumbotron{style: "background-image: linear-gradient(#161918, rgba(239, 234, 236, 0.1)), url(#{::DBX.get_temporary_link(@school.dpath + "/logo.png")[1]})"}
   %h1= @school.title
-.grid-image
+-#.grid-image
   - if admin_signed_in?
     = link_to "Agregar generación", new_school_generation_path(@school), class: "button button--add"
 
@@ -11,5 +11,5 @@
     = link_to([@school, generation]) do
       .mosaico
         .mosaico__picture{:href => school_generation_path(generation)}
-          = image_tag("http://placepu.gs/500/300", alt: "No hay imagenes en esta colleción")
+          = image_tag(::DBX.get_temporary_link(generation.dpath + "/logo.png")[1], alt: "No hay imagenes en esta colleción")
         %h2.mosaico__title= generation.title
