--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -3,5 +3,17 @@
     -#- if admin_signed_in?
         = link_to "Agregar un alumno", new_school_generation_group_student_path(@school, @generation, @group), class: "button button--add"
     - @group.students.each do |photo|
-        .grid-image__container
+        .grid-image__container{"data-popup-open" => "popup-student", :href => "#"}
             = image_tag(::DBX.get_temporary_link(photo.dpath)[1] , class: "grid-image__container__picture",  alt: photo.title)
+
+.popup{"data-popup" => "popup-student"}
+  %a.popup_close{"data-popup-close" => "popup-1", :href => "#"} x
+  %a.popup-arrow.popup-arrow-previous{:href => "#"} <
+  %a.popup-arrow.popup-arrow-next{:href => "#"} >
+  %img.popup_image{:alt => "Imagen de prueba", :src => ::DBX.get_temporary_link(photo.dpath)[1]}/
+  .popup_inner
+    %h2.popup_inner-title Juan Perez Dominguez
+    .popup_inner-data
+      %p F:Juanito Perez
+      %p T:2224596831
+      %p @ juan.perez@gmail.com
