--- a/app/assets/stylesheets/components/_schools.scss
+++ b/app/assets/stylesheets/components/_schools.scss
@@ -2,6 +2,11 @@
   background-color: #FAFAFA;
   padding-top: 50px;
   position: relative;
+  @include outer-container;
+  padding-top: 150px;
+  margin-bottom: 50px;
+  margin-top: 50px;
+
 }
 
 
