--- a/app/views/generations/show.html.haml
+++ b/app/views/generations/show.html.haml
@@ -1,5 +1,10 @@
 %section.jumbotron{style: "background-image: linear-gradient(#161918, rgba(239, 234, 236, 0.1)), url(#{::DBX.get_temporary_link(@generation.dpath + "/logo.png")[1]}"}
   %h1= @generation.title
+
+  - if @generation.description
+    %blockquote
+      %p{style: "color: #F0F0F0"}=  @generation.description
+
   %div.jumbotron_buttons
     %a.jumbotron_buttons-item{"data-popup-open" => "popup-generation", :href => "#"} Expandir
     %a.jumbotron_buttons-item Descargar
@@ -12,6 +17,7 @@
 .events--relative
   .mosaicos
     %h2.mosaicos__title Grupos
+
     - @generation.groups.each do |group|
       = link_to([@school, @generation, group]) do
         .mosaico
