--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,19 +1,27 @@
 .grid-image
-    %h2.grid-image__title= @group.title
-    -#- if admin_signed_in?
-        = link_to "Agregar un alumno", new_school_generation_group_student_path(@school, @generation, @group), class: "button button--add"
-    - @group.students.each do |photo|
-        .grid-image__container{"data-popup-open" => "popup-student", :href => "#"}
-            = image_tag(::DBX.get_temporary_link(photo.dpath)[1] , class: "grid-image__container__picture",  alt: photo.title)
+  %h2.grid-image__title= @group.title
+  - if admin_signed_in?
+    = link_to "Editar grupo", edit_school_generation_group_path(@school, @generation, @group), class: "button button--add"
 
-.popup{"data-popup" => "popup-student"}
-  %a.popup_close{"data-popup-close" => "popup-1", :href => "#"} x
-  %a.popup-arrow.popup-arrow-previous{:href => "#"} <
-  %a.popup-arrow.popup-arrow-next{:href => "#"} >
-  %img.popup_image{:alt => "Imagen de prueba", :src => ::DBX.get_temporary_link(photo.dpath)[1]}/
-  .popup_inner
-    %h2.popup_inner-title Juan Perez Dominguez
-    .popup_inner-data
-      %p F:Juanito Perez
-      %p T:2224596831
-      %p @ juan.perez@gmail.com
+  - if @group.description
+    %blockquote
+      %p=  @group.description
+
+  - @group.students.each do |photo|
+    .grid-image__container{"data-popup-open" => "popup-student", :href => "#"}
+      = image_tag(::DBX.get_temporary_link(photo.dpath)[1] , class: "grid-image__container__picture",  alt: photo.title)
+
+    .popup{"data-popup" => "popup-student"}
+      %a.popup_close{"data-popup-close" => "popup-1", :href => "#"} X
+      %a.popup-arrow.popup-arrow-previous{:href => "#"} <
+      %a.popup-arrow.popup-arrow-next{:href => "#"} >
+      %img.popup_image{:alt => "Imagen de prueba", :src => ::DBX.get_temporary_link(photo.dpath)[1]}/
+      .popup_inner
+        %h2.popup_inner-title= File.basename(photo.title, File.extname(photo.title))
+        .popup_inner-data
+          - if photo.facebook
+            %p F: #{photo.facebook}
+          - if photo.telephone
+            %p T: #{photo.telephone}
+          - if photo.mail
+            %p @: #{photo.mail}
