--- a/app/views/generations/show.html.haml
+++ b/app/views/generations/show.html.haml
@@ -1,4 +1,9 @@
-%section.jumbotron{style: "background-image: linear-gradient(#161918, rgba(239, 234, 236, 0.1)), url(#{::DBX.get_temporary_link(@generation.dpath + "/logo.png")[1]}"}
+- begin
+  - image = ::DBX.get_temporary_link(@generation.dpath + "/logo.png")[1]
+- rescue
+  - image = image_url("/assets/cover.png")
+
+%section.jumbotron{style: "background-image: linear-gradient(#161918, rgba(239, 234, 236, 0.1)), url(#{image})"}
   %h1= @generation.title
 
   - if @generation.description
@@ -19,10 +24,15 @@
     %h2.mosaicos__title Grupos
 
     - @generation.groups.each do |group|
+      - begin
+        - image = ::DBX.get_temporary_link(group.dpath + "/logo.png")[1]
+      - rescue
+        - image = image_url("/assets/cover.png")
+
       = link_to([@school, @generation, group]) do
         .mosaico
           .mosaico__picture{:href => school_generation_group_path(@school, @generation, group)}
-            = image_tag(::DBX.get_temporary_link(group.dpath + "/logo.png")[1], alt: group.description || "Foto grupal")
+            = image_tag(image, alt: group.description || "Foto grupal")
             %h3= group.title
 
 
