--- a/app/views/schools/show.html.haml
+++ b/app/views/schools/show.html.haml
@@ -1,4 +1,11 @@
-%section.jumbotron{style: "background-image: linear-gradient(#161918, rgba(239, 234, 236, 0.1)), url(#{::DBX.get_temporary_link(@school.dpath + "/logo.png")[1]})"}
+- begin
+  - image = ::DBX.get_temporary_link(@school.dpath + "/logo.png")[1]
+- rescue
+  - image = image_url("/assets/cover.png")
+
+
+
+%section.jumbotron{style: "background-image: linear-gradient(#161918, rgba(239, 234, 236, 0.1)), url(#{image})"}
   %h1= @school.title
 .grid-image
   - if admin_signed_in?
@@ -10,6 +17,11 @@
     - @school.generations.each do |generation|
       = link_to([@school, generation]) do
         .mosaico
+          - begin
+            - image= ::DBX.get_temporary_link(generation.dpath + "/logo.png")[1]
+          - rescue
+            - image = image_url("/assets/cover.png")
+          
           .mosaico__picture{:href => school_generation_path(generation)}
-            = image_tag(::DBX.get_temporary_link(generation.dpath + "/logo.png")[1], alt: "No hay imagenes en esta colleción")
+            = image_tag(image, alt: "")
           %h2.mosaico__title= generation.title
