--- a/app/views/schools/index.html.haml
+++ b/app/views/schools/index.html.haml
@@ -1,7 +1,7 @@
 - begin
   - image_url = ::DBX.get_temporary_link('/logo.png')[1]
 - rescue
-  - image_url = image_url("/assets/cover.png")
+  - image_url = image_url("cover.png")
   
 %section.jumbotron{style: "background-image: url('#{image_url}')"}
   %h1 Cheesy
@@ -16,7 +16,7 @@
       - begin
         - image_url = ::DBX.get_temporary_link(school.dpath + '/logo.png')[1]
       - rescue
-        - image_url = image_url("/assets/logos.png")
+        - image_url = image_url("cover.png")
 
       %a.schools__brand{href: school_path(school)}
         .schools__brand__group{style: "background-image: url('#{image_url}')"}
