--- a/app/views/generations/show.html.haml
+++ b/app/views/generations/show.html.haml
@@ -1,7 +1,7 @@
 - begin
   - image = ::DBX.get_temporary_link(@generation.dpath + "/logo.png")[1]
 - rescue
-  - image = image_url("/assets/cover.png")
+  - image = image_url("cover.png")
 
 %section.jumbotron{style: "background-image: linear-gradient(#161918, rgba(239, 234, 236, 0.1)), url(#{image})"}
   %h1= @generation.title
@@ -27,7 +27,7 @@
       - begin
         - image = ::DBX.get_temporary_link(group.dpath + "/logo.png")[1]
       - rescue
-        - image = image_url("/assets/cover.png")
+        - image = image_url("cover.png")
 
       = link_to([@school, @generation, group]) do
         .mosaico
