Change navbar color

--- a/app/assets/stylesheets/components/molecules/_login.scss
+++ b/app/assets/stylesheets/components/molecules/_login.scss
@@ -6,9 +6,9 @@
   &__action {
       &--profile, &--exit {
         display: inline-block;
-        color: #777777;
+        color: #FAFAFA;
         &:visited {
-          color: #777777;
+          color: #FAFAFA;
           text-decoration: none;
         }
       }
