Remove is removed when the students are presented

--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -8,24 +8,25 @@
       %p=  @group.description
 
   - @group.students.each do |photo|
-    .grid-image__container{"data-popup-open" => "popup-student", :href => "#"}
-      = image_tag(::DBX.get_temporary_link(photo.dpath)[1] , class: "grid-image__container__picture",  alt: photo.title)
-      .actions
-        = link_to("Descargar", ::DBX.get_temporary_link(photo.dpath)[1], class: ["button--download"])
-        - if current_admin
-          = link_to("Editar", edit_school_generation_group_student_path(@school, @generation, @group, photo), class: ["button--edit"])
+    - if photo.title != "logo.png"
+      .grid-image__container{"data-popup-open" => "popup-student", :href => "#"}
+        = image_tag(::DBX.get_temporary_link(photo.dpath)[1] , class: "grid-image__container__picture",  alt: photo.title)
+        .actions
+          = link_to("Descargar", ::DBX.get_temporary_link(photo.dpath)[1], class: ["button--download"])
+          - if current_admin
+            = link_to("Editar", edit_school_generation_group_student_path(@school, @generation, @group, photo), class: ["button--edit"])
 
-    .popup{"data-popup" => "popup-student"}
-      %a.popup_close{"data-popup-close" => "popup-1", :href => "#"} X
-      %a.popup-arrow.popup-arrow-previous{:href => "#"} <
-      %a.popup-arrow.popup-arrow-next{:href => "#"} >
-      %img.popup_image{:alt => "Imagen de prueba", :src => ::DBX.get_temporary_link(photo.dpath)[1]}/
-      .popup_inner
-        %h2.popup_inner-title= File.basename(photo.title, File.extname(photo.title))
-        .popup_inner-data
-          - if photo.facebook
-            %p F: #{photo.facebook}
-          - if photo.telephone
-            %p T: #{photo.telephone}
-          - if photo.mail
-            %p @: #{photo.mail}
+      .popup{"data-popup" => "popup-student"}
+        %a.popup_close{"data-popup-close" => "popup-1", :href => "#"} X
+        %a.popup-arrow.popup-arrow-previous{:href => "#"} <
+        %a.popup-arrow.popup-arrow-next{:href => "#"} >
+        %img.popup_image{:alt => "Imagen de prueba", :src => ::DBX.get_temporary_link(photo.dpath)[1]}/
+        .popup_inner
+          %h2.popup_inner-title= File.basename(photo.title, File.extname(photo.title))
+          .popup_inner-data
+            - if photo.facebook
+              %p F: #{photo.facebook}
+            - if photo.telephone
+              %p T: #{photo.telephone}
+            - if photo.mail
+              %p @: #{photo.mail}
