--- a/app/views/schools/index.html.haml
+++ b/app/views/schools/index.html.haml
@@ -5,11 +5,8 @@
   
 %section.jumbotron{style: "background-image: url('#{image_url}')"}
   %h1 Cheesy
-  %h2 Historias que perduran
+  %h2 Historias que se cuentan con sonrisas
 
--#.grid-image
-  - if admin_signed_in?
-    = link_to "Agregar una escuela", new_school_path, class: "button button--add"
 .schools-container
   .schools
     - @schools.each do |school|
