--- a/app/views/schools/index.html.haml
+++ b/app/views/schools/index.html.haml
@@ -4,7 +4,7 @@
   - image_url = image_url("cover.png")
   
 %section.jumbotron{style: "background-image: url('#{image_url}')"}
-  %h1 Cheesy
+  = image_tag("isologo--negative.png", class: ["jumbotron__logo"])
   %h2 Historias que se cuentan con sonrisas
 
 .schools-container
