--- a/app/views/schools/index.html.haml
+++ b/app/views/schools/index.html.haml
@@ -3,7 +3,7 @@
 - rescue
   - image_url = image_url("cover.png")
 .jumbotrons
-  %section.jumbotron--blur{style: "background-image: url('#{image_url}')"}
+  %section.jumbotron--blur{style: "background-image: radial-gradient(transparent,  transparent,  #000), url('#{image_url}')"}
   %section.jumbotron
     = image_tag("isologo--negative.png", class: ["jumbotron__logo"])
     %h2 Historias que se cuentan con sonrisas
