Change the slogan's font

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 @import 'vendor/libs.scss';
 @import 'fonts/main.scss';
 @import 'components/main.scss';
+@import url('https://fonts.googleapis.com/css?family=Cookie');
 
 body {
   background-color:  #FAFAFA;
