Change default font to roboto and change jumbotron structure

--- a/app/assets/stylesheets/_mosaico.scss
+++ b/app/assets/stylesheets/_mosaico.scss
@@ -6,7 +6,7 @@
     &__title {
         padding-top: 30px;
         font-size: 2em;
-        font-family: futura;
+        font-family: 'Roboto', sans-serif;
         font-weigth: bold;
         text-transform: uppercase;
         text-align: center;
@@ -26,7 +26,7 @@
       &__title {
         padding-top: 30px;
         font-size: 1.2em;
-        font-family: futura;
+        font-family: 'Roboto', sans-serif;
         font-weigth: bold;
         text-transform: uppercase;
         text-align: center;
