--- a/app/assets/stylesheets/components/_grid_image.scss
+++ b/app/assets/stylesheets/components/_grid_image.scss
@@ -7,7 +7,7 @@
     
     &__title {
         font-size: 2em;
-        font-family: futura;
+        font-family: 'Roboto', sans-serif;
         text-transform: uppercase;
         text-align: center;
         margin-bottom: 35px;
