--- a/app/assets/stylesheets/components/_mosaico.scss
+++ b/app/assets/stylesheets/components/_mosaico.scss
@@ -7,7 +7,7 @@
     &__title {
         padding-top: 30px;
         font-size: 2em;
-        font-family: futura;
+        font-family: 'Roboto', sans-serif;
         font-weigth: bold;
         text-transform: uppercase;
         text-align: center;
