--- a/app/assets/stylesheets/components/_signs.scss
+++ b/app/assets/stylesheets/components/_signs.scss
@@ -18,7 +18,7 @@
     .main-title {
         padding-top: 30px;
         font-size: 2em;
-        font-family: futura;
+        font-family: 'Roboto', sans-serif;
         font-weigth: bold;
         text-transform: uppercase;
         text-align: center;
