--- a/app/assets/stylesheets/fonts/_futura.scss
+++ b/app/assets/stylesheets/fonts/_futura.scss
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: futura;
+    font-family: 'Roboto', sans-serif;
     src: font-url('Futuralt.ttf');
 }
 
 @font-face {
-    font-family: futura;
+    font-family: 'Roboto', sans-serif;
     src: font-url('Futurabc.ttf');
     font-weight: bold;
 }
