--- a/app/views/schools/show.html.haml
+++ b/app/views/schools/show.html.haml
@@ -4,12 +4,13 @@
   - image = image_url("cover.png")
 
 
-
-%section.jumbotron{style: "background-image: linear-gradient(#161918, rgba(239, 234, 236, 0.1)), url(#{image})"}
-  %h1= @school.title
-  - if @school.description
-    %blockquote
-      %p=  @school.description
+.jumbotrons
+  %section.jumbotron--blur{style: "background-image: radial-gradient(transparent,  transparent,  #000), url('#{image}')"}
+  %section.jumbotron
+    %h1= @school.title
+    - if @school.description
+      %blockquote
+        %p=  @school.description
 
 .grid-image
   - if admin_signed_in?
