--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -17,6 +17,8 @@
 
 #myModal.modal
   %span.close ×
+  %span.next-image >
+  %span.prev-image <
   %img#img.modal-content/
   #caption.modal-footer
     %h3#modal-name.modal-footer-title
